--- a/mega_site/templates/base.html
+++ b/mega_site/templates/base.html
@@ -30,7 +30,7 @@
                     <div class="navbar-nav header-item">
                         <a href="#" class="">Blog</a>
                         <a href="#" class="">Models</a>
-                        <a href="#" class="">Other</a>
+                        <a href="{% url 'blog_page' %}" class="">Other</a>
                     </div>
                 </div>
                 <form class="d-flex">
