--- a/mega_site/templates/index.html
+++ b/mega_site/templates/index.html
@@ -10,61 +10,63 @@
 
     </div>
     {% endblock %}
+
     {% block content %}
     <!-- Posts -->
+    {% for post in posts %}
     <div class="row  my-4">
         <div class="col-sm-3 ">
             <div class="card ">
                 {% load static %}
                 <img src="{% static 'blog/img/trol.jpg' %}" class="card-img-top" alt="">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">{{post}}</h5>
                     <p class="card-text">Some quick example text to build on the card title and ma </p>
                     <a href="#" class="btn btn-outline-primary rounded-0 float-end">Читать далее</a>
                 </div>
             </div>
         </div>
+        {% endfor %}
+        {% endblock %}
+        <!--        <div class="col-sm-3">-->
+        <!--            <div class="card ">-->
+        <!--                {% load static %}-->
+        <!--                <img src="{% static 'blog/img/trol.jpg' %}" class="card-img-top" alt="">-->
 
-        <div class="col-sm-3">
-            <div class="card ">
-                {% load static %}
-                <img src="{% static 'blog/img/trol.jpg' %}" class="card-img-top" alt="">
+        <!--                <div class="card-body">-->
+        <!--                    <h5 class="card-title">Card title</h5>-->
+        <!--                    <p class="card-text">Some quick example text to build on the card title and ma </p>-->
+        <!--                    <a href="#" class="btn btn-outline-primary rounded-0 float-end">Читать далее</a>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--        </div>-->
 
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and ma </p>
-                    <a href="#" class="btn btn-outline-primary rounded-0 float-end">Читать далее</a>
-                </div>
-            </div>
-        </div>
+        <!--        <div class="col-sm-3">-->
+        <!--            <div class="card ">-->
+        <!--                <img src="{% static 'blog/img/trol.jpg' %}" alt="">-->
 
-        <div class="col-sm-3">
-            <div class="card ">
-                <img src="{% static 'blog/img/trol.jpg' %}" alt="">
+        <!--                <div class="card-body">-->
+        <!--                    <h5 class="card-title">Card title</h5>-->
+        <!--                    <p class="card-text">Some quick example text to build on the card title and ma </p>-->
+        <!--                    <a href="#" class="btn btn-outline-primary rounded-0 float-end">Читать далее</a>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--        </div>-->
 
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and ma </p>
-                    <a href="#" class="btn btn-outline-primary rounded-0 float-end">Читать далее</a>
-                </div>
-            </div>
-        </div>
+        <!--        <div class="col-sm-3">-->
+        <!--            <div class="card ">-->
+        <!--                <img src="{% static 'blog/img/trol.jpg' %}" class="card-img-top" alt="">-->
 
-        <div class="col-sm-3">
-            <div class="card ">
-                <img src="{% static 'blog/img/trol.jpg' %}" class="card-img-top" alt="">
-
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and ma </p>
-                    <a href="#" class="btn btn-outline-primary rounded-0 float-end">Читать далее</a>
-                </div>
-            </div>
-        </div>
+        <!--                <div class="card-body">-->
+        <!--                    <h5 class="card-title">Card title</h5>-->
+        <!--                    <p class="card-text">Some quick example text to build on the card title and ma </p>-->
+        <!--                    <a href="#" class="btn btn-outline-primary rounded-0 float-end">Читать далее</a>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--        </div>-->
 
     </div>
     <!-- Posts -->
 
 </div>
 
-{% endblock %}
