--- a/mega_site/templates/index.html
+++ b/mega_site/templates/index.html
@@ -12,61 +12,23 @@
     {% endblock %}
 
     {% block content %}
-    <!-- Posts -->
-    {% for post in posts %}
+
+
     <div class="row  my-4">
+        {% for post in posts %}
         <div class="col-sm-3 ">
             <div class="card ">
-                {% load static %}
                 <img src="{% static 'blog/img/trol.jpg' %}" class="card-img-top" alt="">
                 <div class="card-body">
-                    <h5 class="card-title">{{post}}</h5>
-                    <p class="card-text">Some quick example text to build on the card title and ma </p>
+                    <h5 class="card-title">{{post.title}}</h5>
+                    <p class="card-text">{{post.description}}</p>
                     <a href="#" class="btn btn-outline-primary rounded-0 float-end">Читать далее</a>
                 </div>
             </div>
         </div>
         {% endfor %}
-        {% endblock %}
-        <!--        <div class="col-sm-3">-->
-        <!--            <div class="card ">-->
-        <!--                {% load static %}-->
-        <!--                <img src="{% static 'blog/img/trol.jpg' %}" class="card-img-top" alt="">-->
-
-        <!--                <div class="card-body">-->
-        <!--                    <h5 class="card-title">Card title</h5>-->
-        <!--                    <p class="card-text">Some quick example text to build on the card title and ma </p>-->
-        <!--                    <a href="#" class="btn btn-outline-primary rounded-0 float-end">Читать далее</a>-->
-        <!--                </div>-->
-        <!--            </div>-->
-        <!--        </div>-->
-
-        <!--        <div class="col-sm-3">-->
-        <!--            <div class="card ">-->
-        <!--                <img src="{% static 'blog/img/trol.jpg' %}" alt="">-->
-
-        <!--                <div class="card-body">-->
-        <!--                    <h5 class="card-title">Card title</h5>-->
-        <!--                    <p class="card-text">Some quick example text to build on the card title and ma </p>-->
-        <!--                    <a href="#" class="btn btn-outline-primary rounded-0 float-end">Читать далее</a>-->
-        <!--                </div>-->
-        <!--            </div>-->
-        <!--        </div>-->
-
-        <!--        <div class="col-sm-3">-->
-        <!--            <div class="card ">-->
-        <!--                <img src="{% static 'blog/img/trol.jpg' %}" class="card-img-top" alt="">-->
-
-        <!--                <div class="card-body">-->
-        <!--                    <h5 class="card-title">Card title</h5>-->
-        <!--                    <p class="card-text">Some quick example text to build on the card title and ma </p>-->
-        <!--                    <a href="#" class="btn btn-outline-primary rounded-0 float-end">Читать далее</a>-->
-        <!--                </div>-->
-        <!--            </div>-->
-        <!--        </div>-->
-
     </div>
-    <!-- Posts -->
+    {% endblock %}
 
 </div>
 
