--- a/mega_site/templates/index.html
+++ b/mega_site/templates/index.html
@@ -22,7 +22,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{post.title}}</h5>
                     <p class="card-text">{{post.description}}</p>
-                    <a href="#" class="btn btn-outline-primary rounded-0 float-end">Читать далее</a>
+                    <a href="{{post.get_absolute_url}}" class="btn btn-outline-primary rounded-0 float-end">Читать далее</a>
                 </div>
             </div>
         </div>
